packages/svelte/tests/validator/samples/css-invalid-global-placement-2/input.svelte
<style>
	.foo :global(.bar):first-child {
		color: red;
	}
	.foo :global(.bar):first-child .baz {
		color: red;
	}
</style>
