packages/svelte/tests/compiler-errors/samples/css-global-modifier/main.svelte
<style>
	/* ok */
	div :global.x {
		color: red;
	}

	/* not ok */
	.x:global {
		color: red;
	}
</style>
